--- a/app_client/auth/login/login.view.html
+++ b/app_client/auth/login/login.view.html
@@ -9,16 +9,16 @@
       <h1 class="form-signin-heading">Sign in</h1>
       <p class="lead">Not a member? Please <a href="register">register</a> instead.</p>
   
-      <form ng-submit="vm.onSubmit()">
-        <div class="form-group">
+      <form name="loginForm" ng-submit="vm.onSubmit()">
+        <div class="form-group" ng-class="{ 'has-error': loginForm.email.$touched && loginForm.email.$invalid }">
           <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="vm.credentials.email">
+          <input type="email" class="form-control" id="email" name="email" tabindex=1 placeholder="your@email.com" ng-model="vm.credentials.email" ng-minLength=5 ng-maxlength=254 required>
         </div>
-        <div class="form-group">
+        <div class="form-group" ng-class="{ 'has-error': loginForm.password.$touched && loginForm.password.$invalid }">
           <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Password" ng-model="vm.credentials.password">
+          <input type="password" class="form-control" id="password" name="password" tabindex=2 placeholder="Enter your password" ng-model="vm.credentials.password" ng-minLength=6 ng-maxlength=25 required>
         </div>
-        <button type="submit" class="btn btn-default">Sign in!</button>
+        <button type="submit" class="btn btn-default" ng-disabled="loginForm.$invalid">Sign in!</button>
       </form>
 
     </div>
