--- a/app_client/auth/register/register.view.html
+++ b/app_client/auth/register/register.view.html
@@ -6,20 +6,20 @@
     <div class="col-md-6">
       <h1>Register</h1>
       <p class="lead">Already a member? Please <a href="login">log in</a> instead.</p>
-      <form ng-submit="vm.onSubmit()">
-        <div class="form-group">
+      <form name= "registerForm" ng-submit="vm.onSubmit()">
+        <div class="form-group" ng-class="{ 'has-error': registerForm.name.$touched && registerForm.name.$invalid }">
           <label for="name">Full name</label>
-          <input type="text" class="form-control" id="name" placeholder="Enter your name" ng-model="vm.credentials.name">
+          <input type="text" class="form-control" id="name" name="name" tabindex=1 placeholder="Your full name" ng-model="vm.credentials.name" ng-pattern="^[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,254}$" required>
         </div>
-        <div class="form-group">
+        <div class="form-group" ng-class="{ 'has-error': registerForm.email.$touched && registerForm.email.$invalid }">
           <label for="email">Email address</label>
-          <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="vm.credentials.email">
+          <input type="email" class="form-control" id="email" name="email" tabindex=2 placeholder="your@email.com" ng-model="vm.credentials.email" ng-maxlength=254 ng-pattern="^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,}$" required>
         </div>
-        <div class="form-group">
+        <div class="form-group" ng-class="{ 'has-error': registerForm.password.$touched && registerForm.password.$invalid }">
           <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Password" ng-model="vm.credentials.password">
+          <input type="password" class="form-control" id="password" name="password" tabindex=3 placeholder="Enter your password" ng-model="vm.credentials.password" ng-minLength=6 ng-maxlength=254 required>
         </div>
-        <button type="submit" class="btn btn-default">Register!</button>
+        <button type="submit" class="btn btn-default" ng-disabled="registerForm.$invalid">Register!</button>
       </form>
     </div>
   </div>
