--- a/app_client/profile/profile.view.html
+++ b/app_client/profile/profile.view.html
@@ -7,14 +7,14 @@
 
       <h1 class="form-signin-heading">Your profile</h1>
 
-      <form  class="form-horizontal">
+      <form class="form-horizontal" ng-if="vm.user">
         <div class="form-group">
           <label class="col-sm-3 control-label">Full name</label>
-          <p class="form-control-static">{{ vm.user.name }}</p>
+          <p class="form-control-static" ng-bind="vm.user.name"></p>
         </div>
         <div class="form-group">
           <label class="col-sm-3 control-label">Email</label>
-          <p class="form-control-static">{{ vm.user.email }}</p>
+          <p class="form-control-static" ng-bind="vm.user.email"></p>
         </div>
       </form>
 
